sna: Perform composite rotation on the individual damage elements

As the rotation may need to perform intermediate copies (e.g. displays
larger than the render pipeline), we can reduce the amount of overdraw
by using the damage boxes rather than preparing to redraw the entire
output.

Reported-by: Frank Delache <franck.delache@grassvalley.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=93864
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>